Refactor restaurant, menu and order endpoints